# fastapi-htmx

./: .flake8  .gitignore  README  pyproject.toml  requirements.txt  setting.json
app/: main.py
app/core/connector/: dhBoot3.py  dremioConnector.py
app/core/connector/s3_utils/: prefix_keys.py
app/core/service/: article.py
app/core/service/content/: chart.py  json.py  makedown.py  panda_chart.py
app/core/service/menu/: menu_article.py  menu_label.py
app/core/utils/: file.py  json_helper.py
app/htmlStatic/: index.html  test.html
app/htmlStatic/css/: color.css  markdown.css  utils.css
app/services/: service_app.py
app/services/htmx_demo/: router.py
app/services/htmx_demo/article/: content.py  exemple1.py  exemple2.py  exemple_component.py
app/services/htmx_demo/menu/: menu.py
app/services/htmx_template/: router.py
src/fastapi_htmx/: main.py
src/fastapi_htmx/core/connector/: dhBoot3.py  dremioConnector.py
src/fastapi_htmx/core/connector/s3_utils/: normalise_prefix.py  prefix_keys.py
src/fastapi_htmx/core/service/: article.py
src/fastapi_htmx/core/service/content/: chart.py  json.py  makedown.py  panda_chart.py
src/fastapi_htmx/core/service/menu/: menu_article.py  (+1 more)
src/fastapi_htmx/core/utils/: file.py  json_helper.py  miscellaneous.py
src/fastapi_htmx/htmlStatic/: style.css
src/fastapi_htmx/htmlStatic/css/: article.css  body.css
src/fastapi_htmx/htmlStatic/js/: htmx_event.js
src/fastapi_htmx/services/: service_app.py
src/fastapi_htmx/services/htmx_demo/: router.py
src/fastapi_htmx/services/htmx_template/: router.py
(+6 files in other folders)
