[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mon_package"
version = "0.1.0"
description = "Une courte description"
authors = [{name="Votre Nom", email="vous@example.com"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]